Suppresion de la version Interface graphique (manque de temps)