@@ -5,4 +5,4 @@
 ## Installation et Run du programme
 - [Installation] : ``` mvn install```
 - [Compilation] : ``` mvn package```
-- [Run] : ``` java --module-path .\poo_fastfood_auzou_fremeaux\src\main\java\org\lib\openjfx-17.0.1_monocle-windows-x64_bin-sdk\javafx-sdk-17.0.1\lib --add-modules=javafx.controls -cp .\poo_fastfood_auzou_fremeaux\target\poo_fastfood_auzou_fremeaux-1.0-SNAPSHOT.jar org.src.Main_fastfood ```
+- [Run] : ``` java -cp ./poo_fastfood_auzou_fremeaux/target/poo_fastfood_auzou_fremeaux-1.0-SNAPSHOT.jar org.src.Main_fastfood ```
